--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
     congue eget, auctor vitae massa.</p>
 
-  <img src="pie.jpg"/>
+  <img src="img/pie.jpg"/>
 
   <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum,
     nisi lorem egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec
